# cheatle

./: .tool-versions  README.md  pyproject.toml
cheatle/: __init__.py  app.py  cli.py
tests/: test_cheatle.py
