[tool.poetry]
name = "cheatle"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.4"
pytest = "^7.0.1"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
cheatle = 'cheatle.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
